# live-downloader

./: .gitignore  Install-StartupTask.ps1  LiveDownloader.App.ps1  LiveDownloader.ps1  README.md  Start-LiveDownloader.ps1  Stop-LiveDownloader.ps1  TAURI_MIGRATION_PLAN.md  THIRD_PARTY_NOTICES.md  Uninstall-StartupTask.ps1  config.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml  validate.yml
docs/: RELEASING.md
scripts/: bump-version.mjs
src/: App.tsx  i18n.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  engine.rs  legacy.rs  lib.rs  main.rs  models.rs
src-tauri/windows/: hooks.nsh
src/components/: AddStreamDialog.tsx  HelpPanel.tsx  Inspector.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusDot.tsx  WatchTable.tsx
src/data/: demo.ts
src/lib/: dates.ts  desktop.ts  releases.ts
