[package]
name = "live-downloader"
version = "1.0.1"
description = "A resilient desktop recorder for authorised live streams"
authors = ["Live Downloader contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "live_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "sync", "time", "rt-multi-thread"] }
tokio-util = "0.7"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_System_Threading"] }
